# git-excess

./: .gitignore  Cargo.toml  README.md
egit/: Cargo.toml
egit/src/: main.rs
git-embed/: Cargo.toml  egit  git-embed
git-embed/src/: main.rs
git-sdif/: Cargo.toml
git-sdif/src/: main.rs
git-sdif/src/git_utils/: mod.rs
git-srep/: Cargo.toml
git-srep/src/: main.rs
git_utils_shared/: Cargo.toml
git_utils_shared/src/: egit.rs  embed.rs  file.rs  lib.rs
