[package]
name = "git-sdif"
version = "0.5.0"
edition = "2021"
authors = ["AppCove, Inc."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
git_utils_shared = { path = "../git_utils_shared"}